--- a/html/styles.css
+++ b/html/styles.css
@@ -10,6 +10,9 @@
 html {
     box-sizing: border-box;
     height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column; 
 }
 
 
@@ -19,8 +22,15 @@ body {
     font-weight: 600;
     font-style: normal;
     margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column; 
 }
 
+main{
+    display: flex;
+    flex: 1;
+}
 
 a {
     text-decoration: none;
@@ -36,7 +46,7 @@ ul {
 .wrapper {
     max-width: 1230px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 15px; 
 }
 
 
@@ -227,9 +237,10 @@ ul {
 }
 
 
+/* контейнер */
 .container {
     width: 1200px;
-    height: 360px; /* Высота контейнера уменьшена */
+    height: 346px;
     max-width: 100%;
     background-color: #fff;
     border: 1px solid transparent;
@@ -244,18 +255,18 @@ ul {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 16px; /* Уменьшен разрыв между элементами */
-    padding: 24px 40px; /* Отступы внутри контейнера уменьшены */
+    gap: 16px;
+    padding: 24px 40px;
 }
 
 .container-title {
-    font-size: 32px; /* Уменьшен размер текста */
+    font-size: 32px;
     color: #020202;
-    margin: 0;
+    margin-top: 22px;
 }
 
 .container-text {
-    font-size: 16px; /* Уменьшен размер текста */
+    font-size: 16px;
     font-weight: 400;
     color: #A7A7A7;
     margin: 0;
@@ -264,13 +275,13 @@ ul {
 .container-price {
     color: #A7A7A7;
     font-weight: 600;
-    font-size: 16px; /* Уменьшен размер текста */
+    font-size: 16px;
     text-decoration: line-through;
     margin: 0;
 }
 
 .container-sale {
-    font-size: 32px; /* Уменьшен размер текста */
+    font-size: 32px;
     font-weight: 700;
     color: #56A033;
     margin: 0;
@@ -282,8 +293,9 @@ ul {
     text-align: left;
     gap: 4px;
     background: #B8ECA0;
-    padding: 8px 0; /* Уменьшен вертикальный отступ */
-    width: 320px; /* Немного уменьшена ширина кнопки */
+    padding: 8px 0;
+    width: 320px;
+    margin-top: 25px;
     border-radius: 0 26px 26px 0;
     margin-bottom: 50px;
 }
@@ -292,119 +304,265 @@ ul {
     text-decoration: none;
     color: #56A033;
     padding: 0 12px;
-    width: 290px; /* Скорректирована ширина текста кнопки */
-    margin-left: 24px; /* Уменьшен левый отступ */
+    width: 290px;
+    margin-left: 24px;
 }
 
 .container-btn-img img {
     width: 13px;
     height: 14px;
-    margin-right: 12px; /* Уменьшен отступ справа */
+    margin-right: 12px;
 }
 
 .container-img img {
     width: auto;
-    height: 360px; /* Картинка автоматически вписывается в высоту контейнера */
-    object-fit: cover; /* Картинка обрезается, если не помещается */
-    border-radius: 0 26px 26px 0; /* Добавлен радиус для плавности */
-}
-
-
-
-
-
-
-
-
-
-
-
-/* .container {
-    width: 1200px;
-    height: 460px;
-    max-width: 100%;
-    background-color: #fff;
-    border: 1px solid transparent;
-    border-radius: 26px;
-    display: flex;
-    justify-content: space-between;
-    text-align-last: left;
-    text-align: left;
-}
-
-.container-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 20px;
-    padding-left: 48px;
-    padding-right: 40px;
-}
-
-.container-title {
-    font-size: 40px;
-    color: #020202;
-    margin: 0;
-    padding-top: 58px;
-}
-
-.container-text {
-    font-size: 20px;
-    font-weight: 400;
-    color: #A7A7A7;
-    padding-top: 20px;
-    margin: 0;
-}
-
-.container-price {
-    color: #A7A7A7;
-    font-weight: 600;
-    font-size: 20px;
-    text-decoration: line-through;
-    padding-top: 28px;
-    margin: 0;
-}
-
-.container-sale {
-    font-size: 40px;
-    font-weight: 700;
-    color: #56A033;
-    margin: 0;
-    padding-top: 4px;
-    padding-bottom: 28px;
-}
-
-
-
-
-.container-btn {
-    display: flex;
-    align-items: center;
-    text-align: left;
-    gap: 4px;
-    background: #B8ECA0;
-    padding: 12px 0;
-    width: 350px;
+    height: 346px;
+    object-fit: cover;
     border-radius: 0 26px 26px 0;
 }
 
-.container-btn-item {
+
+/* Промо предложения */
+
+.promo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+    gap: 0 40px;
+}
+
+
+.promo__item {
+    display: flex;
+    align-items: center;
+    width: 260px;
+    height: 60px;
+    background-color: #B8ECA0;
+    border: 1px solid transparent;
+    border-radius: 26px;
+    padding: 0 15px;
+    overflow: hidden;
+}
+
+.promo__item-img {
+    width: 10px;
+    height: 10px;
+    margin-right: 20px;
+    object-fit: contain;
+    align-self: center;
+
+    transform: translateY(2%);
+}
+
+.promo__item-btn {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    text-decoration: none;
+}
+
+.promo__item-btn p {
+    font-size: 16px;
+    color: #56A033;
+    margin: 0;
+    max-width: 150px;
+    word-wrap: break-word;
+}
+
+.promo__item-arrow {
+    height: 12px;
+    width: 12px;
+    object-fit: contain;
+}
+
+
+
+
+/* grid */
+
+
+.recomendation {
+    margin-top: 60px;
+}
+
+.recomendation-title {
+    display: flex;
+    font-size: 36px;
+    font-weight: 700;
+    color: #020202;
+}
+
+.recomendation__container {
+    margin-top: 60px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+    width: 100%;
+}
+
+.recomendation__container-item {
+    width: 100%;
+    padding: 0 20px;
+    border: 1px solid transparent;
+    background: #fff;
+    border-radius: 24px;
+}
+
+.container-item-link {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     text-decoration: none;
     color: inherit;
-    padding: 0 12px;
-    width: 317px;
+}
+
+.container-item-img {
+    width: 100%;
+    max-width: 320px;
+}
+
+.container-item-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.container-item-price {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.price-sale {
+    margin: 0;
+    font-size: 24px;
+    font-weight: 700;
+    color: #020202;
+}
+
+.price-percent {
+    margin: 0;
+    background-color: #B8ECA0;
     color: #56A033;
-    margin-left: 48px;
+    padding: 3px 10px;
+    border-radius: 16px;
 }
 
-.container-btn-img img {
-    width: 13px;
-    height: 14px;
-    margin-right: 20px;
+.container-item-oldprice {
+    text-decoration: line-through;
+    color: #A7A7A7;
+    margin-top: 5px;
 }
 
-.container-img img {
-    width: 640px;
-    height: 460px;
-} */
+.container-item-name {
+    margin-top: 10px;
+    text-align: left;
+    font-size: 18px;
+    font-weight: 600;
+    color: #020202;
+}
+
+.container-item-name:hover {
+    color: #A7A7A7;
+}
+
+.container-item-buy {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 18px;
+    margin-bottom: 18px;
+}
+
+.item-buy-btn {
+    text-decoration: none;
+    background-color: #56A033;
+    color: #fff;
+    padding: 12px 55px;
+    border-radius: 22px;
+}
+
+.item-cart-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #B8ECA0;
+    border-radius: 16px;
+    /* width: 26px;
+    height: 26px; */
+    padding: 8px 14px;
+    margin-left: 14px;
+}
+
+.item-cart-btn img {
+    color: #56A033;
+    width: 26px;
+    height: 26px;
+}
+
+
+
+
+
+/* footer */
+
+.footer {
+    margin-top: 100px;
+    background-color: #A7A7A7;
+    padding: 40px 20px;
+}
+
+
+.footer__bg {
+    padding: 20px 0;
+    width: 100%;
+}
+
+.footer__grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 40px;
+    width: 100%;
+}
+
+.footer__column {
+    text-align: left;
+}
+
+
+.footer__logo img {
+    max-width: 100%;
+    height: auto;
+}
+
+.footer__title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #020202;
+    margin-bottom: 12px;
+}
+
+.footer__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+.footer__link {
+    font-size: 16px;
+    color: #555;
+    text-decoration: none;
+    margin-bottom: 8px;
+    display: block;
+    transition: color 0.3s ease;
+}
+
+
+.footer__link:hover {
+    color: #56A033;
+}
