--- a/frontend/src/components/FeaturedProducts/FeaturedProducts.css
+++ b/frontend/src/components/FeaturedProducts/FeaturedProducts.css
@@ -1,15 +1,28 @@
+
 .featured-products {
-  padding: 40px 0;
+  /* padding: 40px 0; */
+  margin-top: 50px;
+  position: relative;
+  background-color: #f9f9f9;
 }
 
 
 .featured-products__title {
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   text-align: center;
+  color: #A7A7A7;
 }
 
+/* cлайдер */
+.featured-products__swiper {
+  width: 100%;
+  /* max-width: 1200px; */
+  margin: 0 auto;
+  position: relative;
+  /* padding: 0 15px;  */
+}
 
 .featured-products__slide {
   display: flex;
@@ -17,77 +30,175 @@
   align-items: center;
 }
 
+/* стрелки */
+.swiper-button-prev,
+.swiper-button-next {
+  /* width: 50px;
+  height: 50px; */
+  /* background-color: #ffffff; */
+  color: #56a033;
+  /* border: 1px solid #56a033; */
+  /* border-radius: 50%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: absolute; */
+  /* top: 50%; */
+  /* transform: translateY(-50%); */
+  z-index: 10;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  /* background-color: #56a033; */
+  /* color: #ffffff; */
+}
+
+.swiper-button-prev {
+  /* left: -70px;  */
+}
+
+.swiper-button-next {
+  /* right: -70px; */
+}
+
+/* Пагинация */
+.swiper-pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #d1d1d1;
+  margin: 0 5px;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #56a033;
+}
+
 
 .product-card {
+  max-width: 1100px;
   width: 100%;
-  max-width: 360px;
   background: #fff;
   border-radius: 16px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
   overflow: hidden;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
+  gap: 16px;
+  padding: 20px;
+  margin: 0 auto;
 }
-
 
 .product-card__content {
-  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  max-width: 60%;
+  padding: 0 30px;
 }
-
 
 .product-card__title {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 700;
-  margin-bottom: 10px;
+  margin: 0;
+  padding-top: 20px;
+  color: #020202;
+  word-wrap: break-word;
 }
-
 
 .product-card__description {
-  font-size: 14px;
-  color: #555;
-  margin-bottom: 10px;
+  font-size: 16px;
+  color: #A7A7A7;
+  font-weight: 500;
+  padding-top: 20px;
+  margin: 0;
+  word-wrap: break-word;
 }
-
 
 .product-card__price-old {
-  font-size: 14px;
-  color: #999;
+  font-size: 18px;
+  font-weight: 400;
+  color: #A7A7A7;
   text-decoration: line-through;
+  margin: 0;
 }
-
 
 .product-card__price-sale {
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 700;
-  color: #56A033;
-  margin-bottom: 10px;
+  color: #56a033;
+  margin: 0;
 }
 
-
 .product-card__actions {
-  margin-top: 20px;
+  margin-top: auto;
 }
 
 
 .product-card__button {
   background: #b8eca0;
   border: none;
-  padding: 10px 20px;
+  padding: 8px 24px;
   border-radius: 8px;
-  color: #56A033;
+  color: #56a033;
   font-weight: 700;
+  font-size: 16px;
   cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.3s;
+
+
+  text-decoration: none;
+    background-color: #56A033;
+    color: #fff;
+    padding: 12px 55px;
+    border-radius: 22px;
+  
 }
 
-
 .product-card__button:hover {
-  background: #a8d592;
+  background-color: #a8d592;
 }
 
 
 .product-card__image img {
-  width: 100%;
-  height: 200px;
+  width: auto;
+  height: 346px;
   object-fit: cover;
+  border-radius: 0 16px 16px 0;
+}
+
+
+@media (max-width: 768px) {
+  .product-card {
+    flex-direction: column;
+    padding: 16px;
+  }
+
+  .product-card__image img {
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 40px;
+    height: 40px;
+    left: 10px;
+    right: 10px;
+    top: auto;
+    transform: none;
+  }
 }
