--- a/frontend/src/components/AuthForms/SignupForm.css
+++ b/frontend/src/components/AuthForms/SignupForm.css
@@ -195,3 +195,14 @@
     display: flex;
     justify-content: center;
 }
+
+.error {
+    font-size: 12px;
+    color: #E84747;
+    visibility: hidden;
+    margin-top: 4px;
+}
+
+.input--error + .error {
+    visibility: visible;
+}
