--- a/html/auth.css
+++ b/html/auth.css
@@ -295,23 +295,73 @@ ul {
     border-top: 1px solid #C4C4C4;
 }
 
-.gen-info{
+
+
+
+.gen-info {
     border: 1px solid #C4C4C4;
     border-radius: 24px;
     padding: 28px;
     margin-bottom: 28px;
 }
 
-.gen-info__initial{
+
+.gen-info__general {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+}
+
+.gen-info__general img {
+    /* height: 27px;
+    width: 27px; */
+    padding: 11px;
+    background: #B8ECA0;
+    color: #56A033;
+    border: 1px solid transparent;
+    border-radius: 10px;
+}
+
+.gen-info__general p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #999393;
+    margin-left: 12px;
 }
 
 
 
 
+.gen-info__initial {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 28px;
+    gap: 32px;
+}
 
+.name__initial{
+    margin-bottom: 14px;
+}
+
+.initial__first-name,
+.initial__last-name,
+.initial__birthday {
+    font-size: 16px;
+    font-weight: 500;
+    color: #999393;
+    width: 100%;
+}
+
+.first-name-input {
+    width: 100%;
+    background: #B8ECA0;
+    color: #020202;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 14px 27px;
+    border: 1px solid transparent;
+    border-radius: 24px;
+}
 
 
 
