--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -168,3 +168,10 @@
     display: block;
     height: 44px;
 }
+
+.profile-avatar{
+    border-radius: 50%;
+    object-fit: cover;
+    width: 44px;
+    height: 44px;
+}
