--- a/frontend/src/components/ProfileForm/ProfileForm.css
+++ b/frontend/src/components/ProfileForm/ProfileForm.css
@@ -1,8 +1,128 @@
 .general-personal,
-.password-change {
+.password-change,
+.password-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 28px;
     gap: 32px;
+}
+
+.general-delivery__address,
+.payment-method__title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+    gap: 32px;
+}
+
+.address-personal {
+    margin-top: 28px;
+    margin-bottom: 14px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #999393;
+}
+
+.address-change-btn,
+.title__btn {
+    /* border: 1px solid #B8ECA0;
+    background: #B8ECA0;
+    color: #56A033;
+    border-radius: 26px;
+    font-weight: 600;
+    font-size: 16px;
+    padding: 17px 27px;
+    width: 419px;
+    align-items: center; */
+
+
+    border: 1px solid #B8ECA0;
+    border-radius: 24px;
+    background: #B8ECA0;
+    color: #56A033;
+    padding: 16px 33px;
+    font-weight: 600;
+    font-size: 16px;
+    width: 100%;
+    align-content: center;
+    cursor: pointer;
+}
+
+.title__first,
+.title__second,
+.title__btn {
+    width: 100%;
+}
+
+.title__btn {
+    margin-top: 38px;
+    height: 100px;
+    cursor: pointer;
+}
+
+.title__first,
+.title__second {
+    border: 1px solid #C4C4C4;
+    border-radius: 16px;
+    margin-top: 38px;
+    padding: 16px;
+}
+
+.payment-btn {
+    height: 100%;
+    color: #56A033;
+    background: #B8ECA0;
+    font-size: 16px;
+    font-weight: 600;
+    border: transparent;
+    cursor: pointer;
+}
+
+.first-data,
+.first-input {
+    font-size: 16px;
+    font-weight: 500;
+    color: #56A033;
+}
+
+.second-data,
+.second-input {
+    font-size: 16px;
+    font-weight: 500;
+    color: #A7A7A7;
+}
+
+.first-input,
+.second-input {
+    margin-top: 30px;
+}
+
+.password-btn {
+    background: #B8ECA0;
+    color: #56A033;
+    border-radius: 22px;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+    gap: 32px;
+}
+
+.change-password-btn {
+    background: transparent;
+    color: #56A033;
+    font-size: 16px;
+    font-weight: 600;
+    border: transparent;
+    height: 100%;
+    padding: 16px 27px;
+    cursor: pointer;
+}
+
+.change-password-img{
+    margin-right: 26px;
 }
